src/components/Filter/Filter.scss
@import '../../styles/main.scss';

.filter {
	position: relative;
	user-select: none;
}

.filter-button {
	border-radius: $border-radius;
	box-shadow: $box-shadow;
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	cursor: pointer;
	min-width: 200px;
	min-height: 56px;
	padding: 0 17px 0 24px;

	&__text {
		font-size: 14px;
	}

	&__icon {
		width: 14px;
		height: 14px;
	}
}

.filter-options {
	position: absolute;
	top: calc(100% + 4px);
	left: 0;
	right: 0;
	border-radius: $border-radius;
	box-shadow: $box-shadow;
	display: flex;
	flex-direction: column;
	row-gap: 9px;
	padding: 18px 25px;

	& > li {
		cursor: pointer;
		font-size: 14px;

		&:hover {
			opacity: 0.7;
		}
	}
}

@include apply-theme(filter-button);
@include apply-theme(filter-options);

